BUGFIX: action buttons always visible (not need to scroll) ticket 5051 BUGFIX: got rid of double scroll BUGFIX: do not show action buttons (delete/save) when showing result list ENHANCEMENT: fixed forward button underneath result form
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.4@99942 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ModelAdmin.css
+++ b/css/ModelAdmin.css
@@ -67,7 +67,8 @@ body.ModelAdmin #ResultTable_holder {
 }
 
 body.ModelAdmin #right{
-	overflow:auto !important;
+	overflow:hidden !important;
+	
 }
 
 body.ModelAdmin #right #ModelAdminPanel {
@@ -130,10 +131,15 @@ body.ModelAdmin #statusMessage {
 	margin: 5px 0;
 }
 
+body.ModelAdmin #right .Actions {
+	position:absolute;
+	bottom:4px;
+}
+
 body.ModelAdmin #right .ajaxActions {
-	position: absolute;
-	right: 2px;
-	bottom: -25px;
+	position:absolute;
+	bottom:4px;
+	height: 30px;
 }
 
 #LeftPane .tab {
